--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <script src="systemjs.config.js"></script>
     <script>
-        System.import('app').catch(function() {
+        System.import('app').catch(function(err) {
             console.log(err);
         })
     </script>
